--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,16 +39,29 @@
 
 .ReactModal__Overlay {
   opacity: 0;
-  transform: scale(0.7);
-  transition: all 250ms ease-in-out;
+  transition: opacity 250ms ease-in-out;
 }
 
 .ReactModal__Overlay--after-open{
   opacity: 1;
-  transform: scale(1);
 }
 
 .ReactModal__Overlay--before-close{
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  opacity: 0;
+  transform: scale(0.7);
+  transition: all 250ms ease-in-out;
+}
+
+.ReactModal__Content--after-open{
+  opacity: 1;
+  transform: scale(1);
+}
+
+.ReactModal__Content--before-close{
   opacity: 0;
   transform: scale(0.7);
 }
